namespaces/live.cloud-platform.service.justice.gov.uk/modernisation-platform-slackbot-app-prod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "modernisation-platform-slackbot-app-prod"
  labels:
    cloud-platform.justice.gov.uk/is-production: "true"
    cloud-platform.justice.gov.uk/environment-name: "production"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "Platforms"
    cloud-platform.justice.gov.uk/slack-channel: "modernisation-platform"
    cloud-platform.justice.gov.uk/application: "Modernisation Platform Slackbot Application"
    cloud-platform.justice.gov.uk/owner: "Modernisation Platform: modernisation-platform@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/modernisation-platform-slackbot"
    cloud-platform.justice.gov.uk/team-name: "modernisation-platform"
    cloud-platform.justice.gov.uk/review-after: ""
